# AioTGram

./: .gitignore  README.md  pyproject.toml
aiotgram/: __init__.py  apihelper.py  handler_backends.py  types.py  util.py
aiotgram/types/: __init__.py  base.py  chat.py  common.py  ext.py  games.py  inlinequery.py  inputmedia.py  keyboards.py  payments.py  poll.py  primary.py  stickers.py  update.py
examples/webhook_examples/: fastapi_example.py
